# banks-discounts-py

./: .gitignore  README  README.md  README.old.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
api/alembic/: env.py
api/app/: main.py
api/app/api/v1/routes/: __init__.py  health.py
api/app/core/: config.py
api/app/database/: models.py  session.py
api/banks_discounts_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/docs/: README.md
api/docs/adr/: 001-compose-by-environment.md  002-alembic-inside-container.md  003-initial-promotion-data-model.md  004-enums-in-database-layer.md
api/docs/database/: first-migration-scope.md  future-tables.md  schema-overview.md
api/docs/docker/: environment-setup.md
api/docs/scraping/: ingestion-flow.md
api/environments/: dev.env  prod.env  qa.env
